<resources>
    <string name="app_name">CovidAPP</string>


    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="signup">Sign up</string>
    <string name="fullname">Full Name</string>
    <string name="Mobile">Mobile</string>

    <string name="already">Already have an account?</string>
    <string name="loginhere">Login here</string>
    <string name="mobile">Mobile</string>

    <string name="today_death">Today Death :</string>
    <string name="total_test">Total Test :</string>
    <string name="total_cases">Total Cases :</string>
    <string name="poster">poster</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    <string name="dashboard">Dashboard</string>
    <string name="country">Country</string>
    <string name="stack">Stack</string>
    <string name="logout">Logout</string>

    <string name="new_confirmed">NewConfirmed</string>
    <string name="total_confirmed">TotalConfirmed</string>
    <string name="new_deaths">NewDeaths</string>
    <string name="total_deaths">TotalDeaths</string>
    <string name="total_recovered">TotalRecovered</string>

    <string name="button">click button</string>
    <string name="dialogTitle">"Are you sure to logout</string>
    <string name="dialogMessage">Deleting file may be harm your system</string>


</resources>